--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,33 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
-}
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
-}
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
-}
-
-.card {
-  padding: 2em;
-}
-
-.read-the-docs {
-  color: #888;
-}
+/* const fonts = [
+    { fontFamily: '"Cal Sans", sans-serif', fontSize: '1.5rem' },
+    { fontFamily: '"Rock Salt", cursive', fontSize: '1.15rem' }, // visually large
+    { fontFamily: '"Silkscreen", sans-serif', fontSize: '1.3rem' }, 
+    { fontFamily: '"Kaushan Script", cursive', fontSize: '1.5rem' },
+    { fontFamily: '"Bungee Shade", cursive', fontSize: '1.45rem' },
+    // { fontFamily: '"VT323", monospace', fontSize: '2rem' },
+    { fontFamily: '"Splash", cursive', fontSize: '1.5rem' },
+    // { fontFamily: '"Jersey 10", cursive', fontSize: '1.5rem' },
+    
+    
+    // { fontFamily: '"Protest Riot", sans-serif', fontSize: '1.5rem' },
+        // { fontFamily: '"Akronim", cursive', fontSize: '1.5rem' },
+        //   { fontFamily: '"Afacad Flux", sans-serif', fontSize: '1.5rem' },
+        //   { fontFamily: '"Autour One", cursive', fontSize: '1.5rem' },
+        //   { fontFamily: '"Birthstone Bounce", cursive', fontSize: '1.5rem' },
+        //   { fontFamily: '"Cedarville Cursive", cursive', fontSize: '1.5rem' },
+        //   { fontFamily: '"Comforter", cursive', fontSize: '1.5rem' },
+        //   { fontFamily: '"Comforter Brush", cursive', fontSize: '1.5rem' },
+        //   { fontFamily: '"Croissant One", cursive', fontSize: '1.5rem' },
+        //   { fontFamily: '"DynaPuff", cursive', fontSize: '1.5rem' },
+        //   { fontFamily: '"Fuggles", cursive', fontSize: '1.5rem' },
+        //   { fontFamily: '"Grechen Fuemen", cursive', fontSize: '1.5rem' },
+        //   { fontFamily: '"Kolker Brush", cursive', fontSize: '1.5rem' },
+        // { fontFamily: '"Langar", cursive', fontSize: '1.5rem' },
+        //   { fontFamily: '"Lexend Deca", sans-serif', fontSize: '1.5rem' },
+        //   { fontFamily: '"Mansalva", cursive', fontSize: '1.5rem' },
+        //   { fontFamily: '"Mogra", cursive', fontSize: '1.5rem' },
+        //   { fontFamily: '"Oregano", cursive', fontSize: '1.5rem' },
+        //   { fontFamily: '"Righteous", sans-serif', fontSize: '1.5rem' },
+        // { fontFamily: '"Silkscreen", sans-serif', fontSize: '1.3rem' }, 
+//   { fontFamily: '"Tilt Warp", cursive', fontSize: '1.5rem' },
+]; */
