--- a/src/index.css
+++ b/src/index.css
@@ -5,5 +5,9 @@
 
 body {
   font-family: 'Lexend Deca', sans-serif;
-  background-color: #F8F8F8;
+  background-color: #F5F5F5;
 }
+
+
+/* Hide the default system cursor */
+
