--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,13 @@
 @tailwind utilities;
 
 
+
 body {
-  font-family: 'Lexend Deca', sans-serif;
-  background-color: #F5F5F5;
+  font-family: "General Sans", sans-serif;
+}
+
+h1, h2, h3, h4 {
+  font-family: "Bricolage Grotesque", sans-serif;
 }
 
 
