--- a/src/index.css
+++ b/src/index.css
@@ -5,8 +5,25 @@
 
 
 body {
-  font-family: "Lexend Deca", sans-serif;
+  font-family: "Lexend Deca", sans-serif !important;
   background-color: #2c2c2c;
+  background-color: #030100;
+
+}
+
+body {
+  background-color: #030100;
+  position: relative;
+}
+
+body::before {
+  content: "";
+  position: fixed;
+  inset: 0;
+  z-index: -1;
+  background-image: url("/textures/grid-texture.png");
+  background-repeat: repeat;
+  opacity: 0.5; /* <-- safe opacity control */
 }
 
 .custom-cursor {
@@ -35,3 +52,4 @@ h1, h2, h3, h4 {
   z-index: 9999;
   transition: transform 0.1s ease;
 }
+
