--- a/src/index.css
+++ b/src/index.css
@@ -27,11 +27,15 @@ body::before {
 }
 
 .custom-cursor {
-  width: 6px;
-  height: 6px;
-  background-color: #ff9d41;
-  border-radius: 9999px;
-  box-shadow: 0 0 4px #ff9d41;
+  position: absolute;
+  /* width: 6px;
+  height: 6px; */
+  background-color:transparent !important;
+  box-shadow: none !important;
+  /* box-shadow: 0 0 4px #ff9d41; */
+  pointer-events: none;
+  border: none !important;
+  z-index: 10000;
 }
 
 h1, h2, h3, h4 {
@@ -42,11 +46,11 @@ h1, h2, h3, h4 {
 /* Hide the default system cursor */
 
 .cursor-dot {
-  background-color: #FF800A;
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  box-shadow: 0 0 6px #FF800A;
+  /* background-color: #FF800A; */
+  /* width: 8px;
+  height: 8px; */
+  /* border-radius: 50%;
+  box-shadow: 0 0 6px #FF800A; */
   position: fixed;
   pointer-events: none;
   z-index: 9999;
@@ -55,4 +59,10 @@ h1, h2, h3, h4 {
 
 body {
   cursor: none;
+}
+
+@keyframes sparklePulse {
+  0% { transform: translate(-50%, -50%) scale(1); opacity: 1; }
+  50% { transform: translate(-50%, -50%) scale(1.3); opacity: 0.7; }
+  100% { transform: translate(-50%, -50%) scale(1); opacity: 1; }
 }
