--- a/src/index.css
+++ b/src/index.css
@@ -6,14 +6,16 @@
 
 body {
   font-family: "Lexend Deca", sans-serif !important;
-  background-color: #2c2c2c;
-  background-color: #030100;
+  position: relative;
 
 }
 
-body {
+.dark{
   background-color: #030100;
-  position: relative;
+}
+
+.light{
+  background-color: #ffffff;
 }
 
 body::before {
@@ -66,3 +68,4 @@ body {
   50% { transform: translate(-50%, -50%) scale(1.3); opacity: 0.7; }
   100% { transform: translate(-50%, -50%) scale(1); opacity: 1; }
 }
+
